@@ -37,7 +37,22 @@ public:
     {
         Init();
 
-        (void)Create(size, family, style, weight, underlined, face, encoding);
+        (void)Create(size, wxSize(0, 0), FALSE, family, style, weight,
+                     underlined, face, encoding);
+    }
+
+    wxFont(const wxSize& pixelSize,
+           int family,
+           int style,
+           int weight,
+           bool underlined = false,
+           const wxString& face = wxEmptyString,
+           wxFontEncoding encoding = wxFONTENCODING_DEFAULT)
+    {
+        Init();
+
+        (void)Create(0, pixelSize, TRUE, family, style, weight, underlined,
+                     face, encoding);
     }
 
     wxFont(const wxNativeFontInfo& info, WXHFONT hFont = 0)
@@ -50,6 +65,8 @@ public:
     wxFont(const wxString& fontDesc);
 
     bool Create(int size,
+                const wxSize& pixelSize,
+                bool sizeUsingPixels,
                 int family,
                 int style,
                 int weight,
@@ -66,6 +83,8 @@ public:
 
     // implement base class pure virtuals
     virtual int GetPointSize() const;
+    virtual wxSize GetPixelSize() const;
+    virtual bool IsUsingSizeInPixels() const;
     virtual int GetFamily() const;
     virtual int GetStyle() const;
     virtual int GetWeight() const;
@@ -75,6 +94,7 @@ public:
     virtual const wxNativeFontInfo *GetNativeFontInfo() const;
 
     virtual void SetPointSize(int pointSize);
+    virtual void SetPixelSize(const wxSize& pixelSize);
     virtual void SetFamily(int family);
     virtual void SetStyle(int style);
     virtual void SetWeight(int weight);
